# HelloVoxel

./: CHANGES.txt  CMakeLists.txt  LICENSE  README.md  custom_map.json  files.txt  headers.txt  lili.supp  nvidia.supp  rebuild.sh  sources.txt  to_fix
assets/maps/: test_01.json
include/: app.hpp  geometry.hpp
include/geometry/: core.hpp  voxel.hpp
include/math/: mat4x4.hpp  vec3.hpp
shader/: shadow.vert  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv  world.frag  world.frag.spv  world.vert  world.vert.spv
src/: app.cpp  app.hpp  main.cpp  map.cpp  map.hpp  map_loader.cpp  map_loader.hpp  map_manager.cpp  map_manager.hpp  utils.cpp  utils.hpp
src/core/: event.cpp  event.hpp  sdl_system.cpp  sdl_system.hpp  window.cpp  window.hpp
src/entity/: player.cpp  player.hpp  playerv2.cpp  playerv2.hpp
src/geometry/: block.cpp  block.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  core.hpp  mat4x4.hpp  mesher.cpp  mesher.hpp  player.cpp  player.hpp  primitives.cpp  primitives.hpp  quad.cpp  quad.hpp  utils.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp  voxel.hpp  voxel_data.hpp
src/math/: mat4x4.cpp  mat4x4.hpp  utils.hpp  vec3.cpp  vec3.hpp
src/meshing/: mesher.cpp  mesher.hpp  primitives.cpp  primitives.hpp  voxel_data.hpp
src/nlohmann/: json.hpp
src/physics/: collision.cpp  collision.hpp  world_interface.hpp
src/render/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  gpu_mesh.cpp  gpu_mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/render/core/: gpu_mesh.cpp  gpu_mesh.hpp  shader.cpp  shader.hpp  texture.hpp
src/render/passes/: renderer.cpp  renderer.hpp  ui_pass.cpp  ui_pass.hpp  world_pass.cpp  world_pass.hpp
src/render/pipelines/: ui_pipeline.cpp  ui_pipeline.hpp  world_pipeline.cpp  world_pipeline.hpp
src/render/scene/: camera.cpp  camera.hpp  model.cpp  model.hpp  sprite.cpp  sprite.hpp
src/tools/: map_loader.cpp  map_loader.hpp
src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  map.cpp  map.hpp  map_manager.cpp  map_manager.hpp  material.cpp  material.hpp
